--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся. Я Инженер на ядерном объекте, которому надоела секретность, старые вредные начальники и отсутствие выезда за границу. Хочу изменить свою жизнь, больше проводить времени с семьей и больше зарабатывать.</h2>
-        <h3>Целеустремленный, вредный человек. Если поставил цель, то в конце концов её добьюсь (может и не за год, но хотя бы за 10 лет)</h3>
-        <p>Люблю заниматься спортом. Любимы вид спорта - бег.</p>
-        <h3>Могут быть полезен при выоплнении практически любых задач, елси она правильно будет поставлена, объяснена и иметь реальные сроки на выполнение</h3>
-        <p>Быстро перемещаюсь, быстро соображаю.</p>
+        <h3>Немного о себе</h3>
+        <p>Целеустремленный, вредный человек. Если поставил цель, то в конце концов её добьюсь (может и не за год, но хотя бы за 10 лет). Люблю заниматься спортом. Любимы вид спорта - бег.</p>
+        <h3>Чем я могу быть полезен.</h3>
+        <p>Могут быть полезен при выоплнении практически любых задач, елси она правильно будет поставлена, объяснена и иметь реальные сроки на выполнение. Быстро перемещаюсь, быстро соображаю.</p>
       </div>
     </section>
 
